Fix blurry thumbnail images in gallery view
Connected to [URS-480](https://jira.library.ucla.edu/browse/URS-480)

modified:   app/assets/stylesheets/ursus/_gallery.scss

--- a/app/assets/stylesheets/ursus/_gallery.scss
+++ b/app/assets/stylesheets/ursus/_gallery.scss
@@ -5,7 +5,6 @@
     outline: 1px solid $light-gray;
     padding: 5px;
     height: 200px;
-    margin-bottom: 15px;
   }
 
   .gallery-text {
@@ -19,21 +18,27 @@
 
   .document {
     .thumbnail {
-      align: center;
       outline: 1px solid $light-gray;
       margin: 5px;
-      align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      .caption {
+        width: 100%;
+      }
     }
     .thumbnail img {
       align: center;
       margin: 15px;
-      width: 80%;
     }
     .document-counter {
       color: $ucla-blue;
       padding-left: 1em;
       margin-bottom: 1.5em;
       margin-right: 0.5em;
+      a {
+        text-align: center;
+      }
     }
   }
 }
@@ -44,7 +49,6 @@
       outline: 1px solid $light-gray;
       padding: 5px;
       height: 200px;
-      margin-bottom: 10px;
     }
     .gallery-text {
       margin: 10px;
@@ -58,7 +62,6 @@
       outline: 1px solid $light-gray;
       padding: 5px;
       height: 200px;
-      margin-bottom: 10px;
     }
     .gallery-text {
       margin: 10px;
